--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -7,7 +7,7 @@
         <div class="cs_section_heading cs_style_1 cs_type_1">
             <div class="cs_section_heading_text">
                 <h2 class="cs_section_title anim_text_writting">
-                    How Our Agency is Transforming <br /> Businesses and Brands through <br /> Online Solutions
+                    The­ Digitized­ World
                 </h2>
             </div>
             {% comment %} <div class="cs_section_heading_right">
@@ -58,9 +58,9 @@
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text me-4">
                     <div class="">
-                        <span id="count1" class="amin_auto_count">91</span>
+                        <span id="count1" class="amin_auto_count">500</span>
                     </div>
-                    <span>K</span>
+                    <span>+</span>
                 </div>
                 <div class="cs_funfact_text cs_primary_font">
                     <p>Project Completed</p>
@@ -71,33 +71,40 @@
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text me-4">
                     <div class="">
-                        <span id="count2" class="amin_auto_count">2</span>
+                        <span id="count2" class="amin_auto_count">100</span>
                     </div>
-                    <span>K</span>
+                    <span>+</span>
                 </div>
 
                 <div class="cs_funfact_text cs_primary_font">
-                    <p>Happy customers</p>
+                    <p>Brands
+                        Served</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text">
-                    <span id="count3" class="amin_auto_count">21</span>
+                    <div class="">
+
+                    <span id="count3" class="amin_auto_count">70</span>
                 </div>
+                <span>+</span>
+            </div>
                 <div class="cs_funfact_text cs_primary_font">
-                    <p class="">Years Experiences</p>
+                    <p class="">Employee
+                        Strength</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text">
-                    <span id="count4" class="amin_auto_count">42</span>
+                    <span id="count4" class="amin_auto_count">4.9</span>
                 </div>
                 <div class="cs_funfact_text cs_primary_font">
-                    <p>Awards Achievement</p>
+                    <p>Google Review
+                        rating</p>
                 </div>
             </div>
         </div>
@@ -116,7 +123,7 @@
                 <div class="cs_section_heading cs_style_1 cs_color_1">
                     <div class="cs_section_heading_text">
                         <h2 class="cs_section_title anim_heading_title">
-                            Our Agency Story
+                            Our story
                         </h2>
                     </div>
                 </div>
@@ -129,24 +136,19 @@
                         <div class="cs_section_heading cs_style_1 cs_color_1">
                             <div class="cs_section_heading_text">
                                 <h3 class="cs_section_title_3 anim_div_ShowLeftSide">
-                                    How Our Agency is Pushing the Boundaries of Online Marketing and Design
-                                </h3>
+                                    Our Algorithms emanates from tech blended ideas....                                </h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="anim_div_ShowRightSide">
                             <p class="cs_ternary_color">
-                                Digital agency! We specialize in helping businesses like yours succeed online. From
-                                website design and development to digital marketing and advertising, we have the tools
-                                and expertise to elevate your online presence. Let us help you lione evolving world
-                                of digital to drive growth and reach your goals.
+                                Its a world, where reality is virtual, emotions wired and career hybrid. The space you dwell is of no importance, your bond personally,skillfully can reach world over. At Gedexo,we dwell in a glocal trajectory, ‘Where we think local,act global’
+
                             </p>
                             <p class="cs_ternary_color">
-                                Digital agency! We specialize in helping businesses like yours succeed online. From
-                                website design and development to digital marketing and advertising, we have the tools
-                                and expertise to elevate your online presence. Let us help you lione evolving world
-                                of digital to drive growth and reach your goals.
+                                We are a company based in a local space, with global aspirations... Our dream is to rise above the expectations. We make it possible, by our team work. Optimism is our hall mark, focus our fuel...
+
                             </p>
                         </div>
                     </div>
