--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -79,7 +79,7 @@
                             </a>
                             <div class="cs_icon_text">
                                 <h6 class="cs_icon_title">Address</h6>
-                                <p class="cs_icon_subtitle">El-Mahalla El-Kubra 37</p>
+                                <p class="cs_icon_subtitle">Near Calicut International Airport, kerala, India</p>
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                             </a>
                             <div class="cs_icon_text">
                                 <h6 class="cs_icon_title">Phone</h6>
-                                <p class="cs_icon_subtitle">(406) 555-0120</p>
+                                <p class="cs_icon_subtitle">+91 7356978604</p>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             </a>
                             <div class="cs_icon_text">
                                 <h6 class="cs_icon_title">Email</h6>
-                                <p class="cs_icon_subtitle">vixan@email.com</p>
+                                <p class="cs_icon_subtitle">contact@gedexo.com</p>
                             </div>
                         </div>
                     </div>
