--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -29,11 +29,13 @@
                                 <path
                                     d="M133.53 6.53033C133.823 6.23744 133.823 5.76256 133.53 5.46967L128.757 0.696699C128.464 0.403806 127.99 0.403806 127.697 0.696699C127.404 0.989593 127.404 1.46447 127.697 1.75736L131.939 6L127.697 10.2426C127.404 10.5355 127.404 11.0104 127.697 11.3033C127.99 11.5962 128.464 11.5962 128.757 11.3033L133.53 6.53033ZM0 6.75H133V5.25H0V6.75Z"
                                     fill="#101010" />
-                            </svg> Creative Agency
+                            </svg> Adept at Digital Solutions
+Consulting and Training
                         </div>
                         <div class="cs_height_20 cs_height_lg_20"></div>
                         <h1 class="cs_hero_title">
-                            Expert Digital Services for Your Own Business
+                            Gedexo
+Accelerating Glocally ...
                         </h1>
                         <div class="cs_height_70 cs_height_lg_60"></div>
                         <div class="cs_hero_text_in">
@@ -142,10 +144,10 @@
 <div class="cs_moving_section_wrap cs_bold">
     <div class="cs_moving_section_in">
         <div class="cs_moving_section cs_stroke_text">
-            More Creativity Power With Vixan Agency
+            More Creativity Power With Gedexo Technologies LLP
         </div>
         <div class="cs_moving_section cs_stroke_text">
-            More Creativity Power With Vixan Agency
+            More Creativity Power With Gedexo Technologies LLP
         </div>
     </div>
 </div>
@@ -163,16 +165,17 @@
                             <div class="cs_section_heading_text">
                                 <div class="cs_section_subtitle">Our Mission</div>
                                 <h2 class="cs_section_title">
-                                    Unleashing Creativity to Transform Your Business
+                                    We are Digital Solution
+Architects...
                                 </h2>
                             </div>
                         </div>
                         <div class="cs_height_40 cs_height_lg_30"></div>
                         <p class="cs_m0">
-                            Welcome to our digital agency! We specialize in helping businesses like yours succeed
-                            online. From website design and development to digital marketing and advertising, we
-                            have the tools and expertise to elevate your online presence. Let us help you lione
-                            evolving world of digital.
+                           We are passionate to provide digital solutions.Our
+company solutions is stretched with consulting and
+trainining in the best way.We navigate you to ever
+changing digital landscape....
                         </p>
                     </div>
                 </div>
@@ -260,8 +263,7 @@
                     Our Services
                 </div>
                 <h2 class="cs_section_title anim_heading_title">
-                    Comprehensive Digital Strategy Transformation
-                </h2>
+                    Our Digital Services    </h2>
             </div>
             <div class="cs_section_heading_right cs_btn_anim">
                 <a href="service.html" class="cs_btn cs_style_1 cs_color_1">
@@ -285,11 +287,11 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Application Development</a>
+                            <a href="service-details.html">
+Consulting</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            Our consulting services are designed to help businesses make informed decisions about their digital strategies. We work closely with our clients to understand their needs and goals, and provide expert guidance and advice to help them achieve success.
                         </div>
                     </div>
                 </div>
@@ -329,11 +331,10 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Web Development</a>
+                            <a href="service-details.html">Training</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            We offer comprehensive training programs to help businesses and individuals improve their digital skills and knowledge. Our training programs cover a wide range of topics, including social media marketing, search engine optimization, email marketing, content marketing, and more.
                         </div>
                     </div>
                 </div>
@@ -373,11 +374,10 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Digital Services</a>
+                            <a href="service-details.html">Digital Solutions</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            We provide a wide range of digital solutions to help businesses streamline their operations, increase efficiency, and boost their online presence. Our solutions include website design and development, e-commerce development, mobile app development, software development, and digital marketing.
                         </div>
                     </div>
                 </div>
@@ -417,11 +417,10 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Digital Product Design</a>
+                            <a href="service-details.html">Support</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            We provide ongoing support and maintenance to ensure that our clients' digital solutions are working effectively and efficiently. Our support services include website and software maintenance, security updates, and technical support.
                         </div>
                     </div>
                 </div>
@@ -827,9 +826,9 @@
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text me-4">
                     <div class="">
-                        <span id="count1" class="amin_auto_count">91</span>
+                        <span id="count1" class="amin_auto_count">500</span>
                     </div>
-                    <span>K</span>
+                    <span>+</span>
                 </div>
                 <div class="cs_funfact_text cs_primary_font">
                     <p>Project Completed</p>
@@ -840,33 +839,39 @@
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text me-4">
                     <div class="">
-                        <span id="count2" class="amin_auto_count">2</span>
+                        <span id="count2" class="amin_auto_count">100</span>
                     </div>
-                    <span>K</span>
+                    <span>+</span>
                 </div>
 
                 <div class="cs_funfact_text cs_primary_font">
-                    <p>Happy customers</p>
+                    <p>Brands Served</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text">
-                    <span id="count3" class="amin_auto_count">21</span>
+                    <div class="">
+
+                    <span id="count3" class="amin_auto_count">70</span>
                 </div>
+                <span>+</span>
+            </div>
                 <div class="cs_funfact_text cs_primary_font">
-                    <p class="">Years Experiences</p>
+                    <p class="">Employee
+                        Strength</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="cs_funfact cs_style1">
                 <div class="cs_funfact_number cs_stroke_text">
-                    <span id="count4" class="amin_auto_count">42</span>
+                    <span id="count4" class="amin_auto_count">4.9</span>
                 </div>
                 <div class="cs_funfact_text cs_primary_font">
-                    <p>Awards Achievement</p>
+                    <p>Google Review
+                        rating</p>
                 </div>
             </div>
         </div>
