--- a/templates/web/service.html
+++ b/templates/web/service.html
@@ -9,7 +9,7 @@
         <div class="cs_section_heading cs_style_1">
             <div class="cs_section_heading_text">
                 <h2 class="cs_section_title anim_word_writting">
-                    Transform Your Online Presence with Our Digital Agency Services
+                    Digital Solutions
                 </h2>
             </div>
         </div>
@@ -24,11 +24,10 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Application Development</a>
+                            <a href="service-details.html">Consulting</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+Our consulting services are designed to help businesses make informed decisions about their digital strategies. We work closely with our clients to understand their needs and goals, and provide expert guidance and advice to help them achieve success.
                         </div>
                     </div>
                 </div>
@@ -68,11 +67,10 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Web Development</a>
+                            <a href="service-details.html">Training</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            We offer comprehensive training programs to help businesses and individuals improve their digital skills and knowledge. Our training programs cover a wide range of topics, including social media marketing, search engine optimization, email marketing, content marketing, and more.
                         </div>
                     </div>
                 </div>
@@ -112,11 +110,10 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Digital Services</a>
+                            <a href="service-details.html">Digital Solutions</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            We provide a wide range of digital solutions to help businesses streamline their operations, increase efficiency, and boost their online presence. Our solutions include website design and development, e-commerce development, mobile app development, software development, and digital marketing.
                         </div>
                     </div>
                 </div>
@@ -156,99 +153,11 @@
                 <div class="cs_card_right">
                     <div class="cs_card_right_in">
                         <h2 class="cs_card_title">
-                            <a href="service-details.html">Digital Product Design</a>
+                            <a href="service-details.html">Support</a>
                         </h2>
                         <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
-                        </div>
-                    </div>
-                </div>
-                <div class="cs_card_link_wrap">
-                    <a href="service-details.html" class="cs_card_link">
-                        <span>
-                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M0.340728 29.2063C0.722095 29.5875 1.34043 29.5875 1.72188 29.2063L29.0656 1.8625C29.4469 1.48106 29.4469 0.862698 29.0656 0.481253C28.6842 0.100002 28.0658 0.100002 27.6844 0.481253L0.340728 27.825C-0.0406592 28.2064 -0.0406592 28.8248 0.340728 29.2063Z"
-                                    fill="currentColor"></path>
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M28.375 26.5625C28.9143 26.5625 29.3516 26.1252 29.3516 25.5859V1.17188C29.3516 0.632618 28.9143 0.195312 28.375 0.195312H3.96094C3.42168 0.195312 2.98438 0.632618 2.98438 1.17188C2.98438 1.71113 3.42168 2.14844 3.96094 2.14844H27.3984V25.5859C27.3984 26.1252 27.8357 26.5625 28.375 26.5625Z"
-                                    fill="currentColor"></path>
-                            </svg>
-                        </span>
-                        <span>
-                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M0.340728 29.2063C0.722095 29.5875 1.34043 29.5875 1.72188 29.2063L29.0656 1.8625C29.4469 1.48106 29.4469 0.862698 29.0656 0.481253C28.6842 0.100002 28.0658 0.100002 27.6844 0.481253L0.340728 27.825C-0.0406592 28.2064 -0.0406592 28.8248 0.340728 29.2063Z"
-                                    fill="currentColor"></path>
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M28.375 26.5625C28.9143 26.5625 29.3516 26.1252 29.3516 25.5859V1.17188C29.3516 0.632618 28.9143 0.195312 28.375 0.195312H3.96094C3.42168 0.195312 2.98438 0.632618 2.98438 1.17188C2.98438 1.71113 3.42168 2.14844 3.96094 2.14844H27.3984V25.5859C27.3984 26.1252 27.8357 26.5625 28.375 26.5625Z"
-                                    fill="currentColor"></path>
-                            </svg>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <div class="cs_card cs_style_1 anim_div_ShowDowns">
-                <div class="cs_card_left">
-                    <div class="cs_card_number cs_primary_font" data-src="{% static 'web/img/hero_img_1.jpg' %}">
-                        05
-                    </div>
-                </div>
-                <div class="cs_card_right">
-                    <div class="cs_card_right_in">
-                        <h2 class="cs_card_title">
-                            <a href="service-details.html">Digital Marketing</a>
-                        </h2>
-                        <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
-                        </div>
-                    </div>
-                </div>
-                <div class="cs_card_link_wrap">
-                    <a href="service-details.html" class="cs_card_link">
-                        <span>
-                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M0.340728 29.2063C0.722095 29.5875 1.34043 29.5875 1.72188 29.2063L29.0656 1.8625C29.4469 1.48106 29.4469 0.862698 29.0656 0.481253C28.6842 0.100002 28.0658 0.100002 27.6844 0.481253L0.340728 27.825C-0.0406592 28.2064 -0.0406592 28.8248 0.340728 29.2063Z"
-                                    fill="currentColor"></path>
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M28.375 26.5625C28.9143 26.5625 29.3516 26.1252 29.3516 25.5859V1.17188C29.3516 0.632618 28.9143 0.195312 28.375 0.195312H3.96094C3.42168 0.195312 2.98438 0.632618 2.98438 1.17188C2.98438 1.71113 3.42168 2.14844 3.96094 2.14844H27.3984V25.5859C27.3984 26.1252 27.8357 26.5625 28.375 26.5625Z"
-                                    fill="currentColor"></path>
-                            </svg>
-                        </span>
-                        <span>
-                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M0.340728 29.2063C0.722095 29.5875 1.34043 29.5875 1.72188 29.2063L29.0656 1.8625C29.4469 1.48106 29.4469 0.862698 29.0656 0.481253C28.6842 0.100002 28.0658 0.100002 27.6844 0.481253L0.340728 27.825C-0.0406592 28.2064 -0.0406592 28.8248 0.340728 29.2063Z"
-                                    fill="currentColor"></path>
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M28.375 26.5625C28.9143 26.5625 29.3516 26.1252 29.3516 25.5859V1.17188C29.3516 0.632618 28.9143 0.195312 28.375 0.195312H3.96094C3.42168 0.195312 2.98438 0.632618 2.98438 1.17188C2.98438 1.71113 3.42168 2.14844 3.96094 2.14844H27.3984V25.5859C27.3984 26.1252 27.8357 26.5625 28.375 26.5625Z"
-                                    fill="currentColor"></path>
-                            </svg>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <div class="cs_card cs_style_1 anim_div_ShowDowns">
-                <div class="cs_card_left">
-                    <div class="cs_card_number cs_primary_font" data-src="{% static 'web/img/hero_img_1.jpg' %}">
-                        06
-                    </div>
-                </div>
-                <div class="cs_card_right">
-                    <div class="cs_card_right_in">
-                        <h2 class="cs_card_title">
-                            <a href="service-details.html">IOS App Development</a>
-                        </h2>
-                        <div class="cs_card_subtitle">
-                            Welcome to our digital agency We specialize in helping business most like yours succeed
-                            online. From website design and development to digital marketing agency.
+                            We provide ongoing support and maintenance to ensure that our clients' digital solutions are working effectively and efficiently. Our support services include website and software maintenance, security updates, and technical support.
+
                         </div>
                     </div>
                 </div>
@@ -296,7 +205,8 @@
                 <div class="cs_section_heading cs_style_1 cs_color_1">
                     <div class="cs_section_heading_text">
                         <h2 class="cs_section_title anim_heading_title">
-                            Our Working Process
+                            
+How we work
                         </h2>
                     </div>
                 </div>
@@ -320,10 +230,12 @@
                                 </div>
                             </div>
 
-                            <h6 class="cs_work_title">Understand</h6>
-                            <p class="cs_work_subtitle">
-                                Welcome to our digital agency We specialize in helping your business most
-                            </p>
+                            <h6 class="cs_work_title">Analysis</h6>
+                            <p class="cs_work_subtitle">We understand the customer need and analayse it in the best possible way
+
+
+                            
+                                                            </p>
                         </div>
                         <div class="cs_card">
                             <div class="cs_card cs_style_1">
@@ -336,9 +248,11 @@
                                 </div>
                             </div>
 
-                            <h6 class="cs_work_title">Design</h6>
+                            <h6 class="cs_work_title">Research</h6>
+
+
                             <p class="cs_work_subtitle">
-                                Welcome to our digital agency We specialize in helping your business most
+                                An through idea is planned by taking the best research tools
                             </p>
                         </div>
                         <div class="cs_card">
@@ -352,10 +266,11 @@
                                 </div>
                             </div>
 
-                            <h6 class="cs_work_title">Development</h6>
+                            <h6 class="cs_work_title">Design & Development
+                               
+                                </h6>
                             <p class="cs_work_subtitle">
-                                Welcome to our digital agency We specialize in helping your business most
-                            </p>
+                                Aviable design os created.Its progress is developed in a proper trajectory                            </p>
                         </div>
                         <div class="cs_card">
                             <div class="cs_card cs_style_1">
@@ -373,6 +288,7 @@
                                 Welcome to our digital agency We specialize in helping your business most
                             </p>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -521,12 +437,14 @@
             <div class="cs_section_heading cs_style_1">
                 <div class="cs_section_heading_text">
                     <h3 class="cs_section_title_3 anim_heading_title">
-                        We'd be interested in learning more about your project.
+                        We would love to hear more
+about your project
                     </h3>
                 </div>
                 <div class="cs_section_heading_right cs_btn_anim">
                     <a href="contact.html" class="cs_btn cs_style_1 cs_color_1">
-                        <span>Contact US</span>
+                        <span>Let’s Talk
+                        </span>
                         <svg width="19" height="13" viewBox="0 0 19 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M18.5303 7.03033C18.8232 6.73744 18.8232 6.26256 18.5303 5.96967L13.7574 1.1967C13.4645 0.903806 12.9896 0.903806 12.6967 1.1967C12.4038 1.48959 12.4038 1.96447 12.6967 2.25736L16.9393 6.5L12.6967 10.7426C12.4038 11.0355 12.4038 11.5104 12.6967 11.8033C12.9896 12.0962 13.4645 12.0962 13.7574 11.8033L18.5303 7.03033ZM0 7.25H18V5.75H0V7.25Z"
