--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -6,13 +6,17 @@
         <div class="row">
             <div class="col-lg-5">
                 <div class="cs_footer_info">
-                    <img src="{% static 'web/img/footer_logo.png' %}" alt="Logo" />
+                    <img src="{% static 'web/img/footer_logo.png' %}"  alt="Logo" />
+                    
                     <p>
-                        Welcome to our digital agency We specialize in helping business most like yours succeed
-                        online. From website design and development.
+                        <strong>HIRE US TO CHANGE YOUR BRAND
+                        </strong><br>
+Do you have a project, maybe you are looking for creative solutions for web and app development
+
+
                     </p>
-                    <a href="mailto:info@email.com"
-                        class="cs_primary_font anim_text_upanddowns"><span>info@email.com</span></a>
+                    <a href="mailto:contact@gedexo.com"
+                        class="cs_primary_font anim_text_upanddowns"><span>contact@gedexo.com</span></a>
                 </div>
             </div>
             <div class="col-lg-6 offset-lg-1">
@@ -33,7 +37,7 @@
                                     d="M7 0.0195312C3.14027 0.0195312 0 3.01027 0 6.68621C0 7.78973 0.289693 8.88387 0.840408 9.85434L6.6172 17.8047C6.69411 17.9373 6.84065 18.0195 7 18.0195C7.15935 18.0195 7.30589 17.9373 7.3828 17.8047L13.1617 9.85105C13.7103 8.88387 14 7.78969 14 6.68617C14 3.01027 10.8597 0.0195312 7 0.0195312ZM7 10.0195C5.07014 10.0195 3.50002 8.52418 3.50002 6.68621C3.50002 4.84824 5.07014 3.35289 7 3.35289C8.92986 3.35289 10.5 4.84824 10.5 6.68621C10.5 8.52418 8.92986 10.0195 7 10.0195Z"
                                     fill="white" />
                             </svg>
-                        </i> 46 JOHN ST TORONTO ON M5V 3W2
+                        </i>Near Calicut International Airport, kerala, India
                     </li>
                     <li>
                         <i>
@@ -49,7 +53,9 @@
                                     d="M15.1294 2.93344C13.5338 1.33791 11.5151 0.330398 9.28656 0.0195312L9.0918 1.40907C11.0169 1.67874 12.7623 2.55141 14.1406 3.92597C15.4477 5.23311 16.3054 6.88483 16.6163 8.70134L17.9983 8.46538C17.635 6.36047 16.6425 4.45033 15.1294 2.93344Z"
                                     fill="white" />
                             </svg>
-                        </i> (406) 555-0120
+                        </i> +91 7356978604
+
+
                     </li>
                     <li>
                         <i>
@@ -62,7 +68,7 @@
                                     d="M0.704883 2.99347L8.08077 7.91091C8.35998 8.09707 8.67997 8.19012 8.99996 8.19012C9.31999 8.19012 9.64002 8.09703 9.91923 7.91091L17.2951 2.99347C17.7365 2.69939 18 2.2072 18 1.67599C18 0.762594 17.2569 0.0195312 16.3435 0.0195312H1.65646C0.743098 0.0195664 0 0.762629 0 1.67687C0 2.2072 0.263531 2.69939 0.704883 2.99347Z"
                                     fill="white" />
                             </svg>
-                        </i> info@email.com
+                        </i> contact@gedexo.com
                     </li>
                 </ul>
             </div>
@@ -78,7 +84,7 @@
         </ul>
     </div>
     <div class="cs_copyright text-center">
-        <div class="container">Copyright 2023, All Right reserved</div>
+        <div class="container">Copyright 2023, All Right reserved by Gedexo</div>
     </div>
 </footer>
 <!-- End Footer -->
